# figura-backend

./: .gitignore  Cargo.toml  Rustfmt.toml  cert.pem
a/: lib.rs  main.rs  service.rs  web_socket.rs
a/api/: auth.rs  headers.rs  mod.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/endpoint/: auth.rs  header.rs  mod.rs  socket.rs
crates/api/src/service/: auth.rs  http.rs  mod.rs
crates/api/src/socket/: actor.rs  message.rs
crates/auth-mojang/: Cargo.toml
crates/auth-mojang/src/: lib.rs
crates/auth-yggdrasil/: Cargo.toml
crates/auth-yggdrasil/src/: lib.rs
local/: cert.pem  key.pem
src/: api.rs  backend.rs  lib.rs  main.rs  service.rs  web_socket.rs
