[package]
name = "figura-backend"
description = "Unofficial custom Figura server backend implementation."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[workspace.package]
authors = ["GlFolker"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/GlennFolker/figura-backend"
rust-version = "1.78"
version = "0.1.0"

[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/auth-mojang",
]

[workspace.dependencies]
figura-api = { path = "crates/api" }
figura-auth-mojang = { path = "crates/auth-mojang" }

actix = "0.13"
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-web-actors = "4"
awc = { version = "3", features = ["rustls-0_23"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
once_cell = "1"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1.8.0" }
webpki-roots = "0.26"

[dependencies]
figura-api = { workspace = true }
figura-auth-mojang = { workspace = true, optional = true }

clap = { workspace = true }
env_logger = { workspace = true }

[features]
default = ["mojang"]
mojang = ["dep:figura-auth-mojang"]
