[package]
name = "figura-auth-mojang"
description = "Mojang's symmetrical protocol encryption API for `figura-backend`."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
